[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/adventure/map/AdventureMap.gd" type="Script" id=1]
[ext_resource path="res://assets/adventure/base/BaseTileSet.tres" type="TileSet" id=2]
[ext_resource path="res://assets/adventure/details/DetailsTileSet.tres" type="TileSet" id=3]
[ext_resource path="res://src/adventure/map/AdventureMapGenerator.gd" type="Script" id=4]
[ext_resource path="res://src/lib/hex/HexMap.gd" type="Script" id=5]
[ext_resource path="res://assets/adventure/entities/EntitiesTileSet.tres" type="TileSet" id=6]

[node name="AdventureMap" type="Node2D"]
script = ExtResource( 1 )

[node name="HexMap" type="Node" parent="."]
script = ExtResource( 5 )

[node name="AdventureMapGenerator" type="Node" parent="."]
script = ExtResource( 4 )

[node name="BaseTileMap" type="TileMap" parent="."]
position = Vector2( -47, -27 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 47, 55 )
cell_half_offset = 1
cell_y_sort = true
centered_textures = true
format = 1
tile_data = PoolIntArray( -131073, 1, 0, -65539, 6, 0, -65538, 1, 0, -65537, 0, 0, -131072, 4, 0, -131071, 4, 0, -3, 6, 0, -2, 0, 0, -1, 0, 0, -65536, 0, 0, -65535, 4, 1, 65533, 3, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 4, 1, 131070, 3, 0, 131071, 5, 0, 65536, 5, 0 )

[node name="DetailsTileMap" type="TileMap" parent="."]
visible = false
position = Vector2( -47, -27 )
tile_set = ExtResource( 3 )
cell_size = Vector2( 47, 55 )
cell_half_offset = 1
cell_y_sort = true
centered_textures = true
format = 1
tile_data = PoolIntArray( -65536, 0, 0, 65535, 0, 0 )

[node name="EntityTileMap" type="TileMap" parent="."]
visible = false
position = Vector2( -47, -27 )
tile_set = ExtResource( 6 )
cell_size = Vector2( 47, 55 )
cell_half_offset = 1
cell_y_sort = true
centered_textures = true
format = 1
tile_data = PoolIntArray( -1, 0, 0 )
